--- a/credits.html
+++ b/credits.html
@@ -5,61 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Dashboard For Analytics - Credits</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #c283ef;
-           
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        #container {
-            background-color: #9ebfe4;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            text-align: left; /* Align text to the left */
-        }
-
-        h1 {
-            color: #ffffff;
-            text-align: center;
-        }
-
-        p {
-            max-width: 600px;
-            margin: 20px auto;
-            line-height: 1.6;
-            text-align: justify;
-        }
-
-        .member {
-            margin-bottom: 20px;
-            display: flex; /* Use flexbox to align image and text horizontally */
-            align-items: center;
-        }
-
-        .member img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            margin-right: 20px; /* Add margin to separate image and text */
-        }
-
-        .member a {
-            color: #ffffff;
-            text-decoration: none;
-        }
-        .header{
-            margin-left: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style1.css">
 </head>
 
 <body>
